--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -10,31 +10,33 @@
 		"run-android": "react-native run-android",
 		"bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
 		"debug": "cd android && ./gradlew assembleDebug",
-		"adb": "adb reverse tcp:9090 tcp:9090"
+		"adb": "adb reverse tcp:9090 tcp:9090",
+		"generator": "node Generator/generator.js"
 	},
 	"dependencies": {
-		"apisauce": "^0.14.2",
+		"apisauce": "^1.0.5",
 		"color": "^3.1.0",
 		"format-json": "^1.0.3",
 		"identity-obj-proxy": "^3.0.0",
-		"lodash": "^4.17.11",
-		"native-base": "^2.8.1",
+		"lodash": "^4.17.15",
+		"native-base": "^2.13.5",
 		"prop-types": "^15.6.1",
 		"querystringify": "1.0.0",
 		"ramda": "^0.26.0",
-		"react": "16.3.1",
-		"react-native": "0.57.5",
+		"react": "16.9.0",
+		"react-native": "0.60.5",
 		"react-native-actionsheet": "^2.4.2",
-		"react-native-animatable": "^1.3.0",
+		"react-native-animatable": "^1.3.2",
 		"react-native-communications": "^2.2.1",
-		"react-native-config": "^0.10.0",
-		"react-native-gesture-handler": "^1.0.9",
-		"react-native-i18n": "1.0.0",
+		"react-native-config": "^0.11.7",
+		"react-native-gesture-handler": "^1.4.1",
+		"react-native-i18n": "2.0.15",
 		"react-native-indicators": "^0.13.0",
-		"react-native-restart": "0.0.7",
-		"react-native-splash-screen": "^3.1.1",
-		"react-native-text-input-mask": "^0.8.0",
-		"react-native-vector-icons": "4.3.0",
+		"react-native-restart": "0.0.12",
+		"react-native-splash-screen": "^3.2.0",
+		"react-native-stars": "^1.1.5",
+		"react-native-text-input-mask": "^1.0.6",
+		"react-native-vector-icons": "6.6.0",
 		"react-navigation": "^3.0.0",
 		"react-navigation-redux-helpers": "^2.0.8",
 		"react-redux": "^5.0.6",
