--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -19,14 +19,17 @@
 		"format-json": "^1.0.3",
 		"identity-obj-proxy": "^3.0.0",
 		"lodash": "^4.17.15",
+		"moment": "^2.24.0",
 		"native-base": "^2.13.5",
 		"prop-types": "^15.6.1",
 		"querystringify": "1.0.0",
 		"ramda": "^0.26.0",
-		"react": "16.9.0",
-		"react-native": "0.60.5",
+		"react": "16.10.1",
+		"react-native": "0.61.1",
 		"react-native-actionsheet": "^2.4.2",
+		"react-native-sectioned-multi-select": "0.7.1",
 		"react-native-animatable": "^1.3.2",
+		"react-navigation-fluid-transitions": "0.3.2",
 		"react-native-communications": "^2.2.1",
 		"react-native-config": "^0.11.7",
 		"react-native-gesture-handler": "^1.4.1",
@@ -114,11 +117,6 @@
 			"XMLHttpRequest",
 			"FormData",
 			"React$Element"
-		]
-	},
-	"rnpm": {
-		"assets": [
-			"./assets/fonts/"
 		]
 	}
 }
