--- a/boilerplate/patches/files/MainActivity.java.ejs
+++ b/boilerplate/patches/files/MainActivity.java.ejs
@@ -1,4 +1,4 @@
-package com.{app_package};
+package com.<%= app_package %>;
 
 import android.os.Bundle;
 
@@ -17,7 +17,7 @@ public class MainActivity extends ReactActivity {
      */
     @Override
     protected String getMainComponentName() {
-        return "{app_name}";
+        return "<%= app_name %>";
     }
 
     protected void onCreate(Bundle savedInstanceState) {
